www/assets/css/styles.css
.back-button {
    position: absolute;
    top: 10px;
}

.topcoat-icon--back {
    background: url("../topcoat/img/back_light.svg") no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.search-bar {
    padding:10px 10px 12px 8px;
}

.search-bar > input {
    width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0);
}

.list {
    list-style-type: none;
    border-top: none !important;
}

.list > li {
    position: relative;
    clear: both;
    padding: 0px;
    margin: 0px;
}

.list > li:nth-of-type(1) {
    border-top: none;
}

.list > li > a {
    margin: 0px;
    display: block;
    height: 57px;
    padding: 4px;
}


.list > li > a > p:nth-of-type(1) {
    margin: 8px 0px 0px 0px;
    font-weight: bold;
}

.list > li p:nth-of-type(2) {
    margin: 0px;
    color: #777;
}

.list > li img {
    width: 57px;
    height: 57px;
    float: left;
    margin-right: 8px;
}

.list li:active {
    background-color: #d6d6d6;
}

.details {
    margin: auto;
}

.details>img {
    float:left;
    margin:10px;
    width: 80px;
    height: 80px;
}

.details h1 {
    padding: 12px 0px 4px 0px;
    margin: 0px 0px 0px 0px;
    font-size: 1.2rem;
}

.details h2 {
    padding: 0px 0px 0px 0px;
    margin: 0px 0px 0px 0px;
    font-size: 1.1rem;
    font-weight: normal;
    color: #888;
}

.details > .scroller {
    top:175px;
}

.actions > li > a {
    padding-left: 12px;
}

.action-icon {
    position: absolute !important;
    top: 18px;
    right: 20px !important;
    width: 28px !important;
    height: 28px;
}

.actions li p:nth-of-type(1) {
    color:  #5DC1FF;
    font-size: 0.9em;
    font-weight: lighter;
}

.actions li p:nth-of-type(2) {
    color: inherit;
}

.icon-call {
    background: transparent url(../topcoat/img/call.svg);
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.icon-sms {
    background: transparent url(../topcoat/img/chat.svg);
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.icon-mail {
    background: transparent url(../topcoat/img/email.svg);
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.icon-manager {
    background: transparent url(../topcoat/img/next.svg);
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.icon-reports {
    background: transparent url(../topcoat/img/next.svg);
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
}

.chevron {
    background: transparent url(../topcoat/img/next_blue.svg);
    background-repeat: no-repeat;
    background-size: contain;
    width: 20px;
    height: 20px;
    position: absolute;
    right: 12px;
    top: 22px;
    height: 50px;
    width: 28px;
}

.scroller {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    position: absolute;
    top: 141px;
    bottom: 0px;
    left: 0px;
    right: 0px;
}

